Terminal: Added "DEC Special Character and Line Drawing Set" character map.
Terminal: Allow printing characters > $7E again; Fixes some issues with certain telnet servers using extended ascii.
Terminal: The terminal state is now acting as a command interpreter, which can be used to type commands and launch sessions with arguments.
Added support for the Sega Saturn keyboard.

v0.27:
SRAM: Added the ability to save config to SRAM.
IRC: Added "tabs" to have several channels/private messaging going at once. It uses 8-bit tilemap buffers in RAM, 
it is limited to 3 concurrent "tabs" at once due to RAM requirements (3*8KB = 24KB RAM used). Use F1/F2/F3 to change tab.
IRC: Added a typing input at the bottom of the screen.
IRC: Commands implemented, prefixed with '/'. Use '/raw <IRC COMMAND>' to send raw IRC command strings.
IRC: You can now initiate a private conversation.
IRC: User list added, press F5 to show/hide window
IRC: Can now change username via the /nick <your_nick> command.
Telnet: Added a proper bell... ok PSG beeps.
Terminal: Added the terminal emulator as its own launchable session type.
TRM: Some windowing cleanup. (TRM = Window plane UI backend)
NET: Moved Networking stuff out of the terminal emulator (Rx/Tx etc) into a new unit 'NET'.
PS2KB: Added timeout code when in the middle of reading a bitstream. May cause dropped key input when the MD is very busy with network traffic. This blocking bug has existed at least since v0.20.
PS2KB: Added Swedish keyboard layout.
Terminal: Added colour support for 4x8 fonts.
Terminal: You can now select to use normal or highlighted colours when using 4x8 fonts with colour. (TODO: Custom colours)
Terminal: Added a lot of new escape codes; window ops, 256 colour handling and a lot of other minor but obscure escape codes.
Fixed some tables that was supposed to be in ROM but instead got placed in RAM (type const * const varname)
Various bugfixes, most related to mIRC colour fuckery and 4x8 fonts (clearing and printing).