@@ -13,11 +13,12 @@ typedef struct s_buffer
 } Buffer;
 
 u8 Buffer_IsFull(Buffer *b);
+u8 Buffer_IsEmpty(Buffer *b);
 u8 Buffer_Push(Buffer *b, u8 data);
 u8 Buffer_Pop(Buffer *b, u8 *data);
 u8 Buffer_ReversePop(Buffer *b);
 
 void Buffer_Flush(Buffer *b);
-void Buffer_PeekLast(Buffer *b, u16 num, u8 r[]);    // Get the last <num> bytes up to head
+void Buffer_PeekLast(Buffer *b, u16 num, u8 r[]);
 
 #endif // BUFFER_H_INCLUDED
