@@ -4,7 +4,7 @@
 #include <genesis.h>
 
 extern u8 vKB_Layout;        // Selected keyboard layout
-extern bool bKB_BATStatus;
+extern u8 vKB_BATStatus;
 extern u8 bKB_ExtKey;
 extern u8 bKB_Break;
 extern u8 bKB_Shift;
