@@ -153,6 +153,42 @@ inline u8 tolower(u8 c)
     return ((c >= 'A') && (c <= 'Z') ? c | 0x60 : c);
 }
 
+char *strtok(char *s, char d)
+{
+    // Stores the state of string
+    static char *input = NULL;
+
+    // Initialize the input string
+    if (s != NULL) input = s;
+
+    // Case for final token
+    if (input == NULL) return NULL;
+
+    // Stores the extracted string
+    char *result = malloc(strlen(input) + 1);
+    int i = 0;
+
+    // Start extracting string and store it in array
+    for (; input[i] != '\0'; i++)
+    {
+        // If delimiter is not reached then add the current character to result[i]
+        if (input[i] != d) result[i] = input[i];
+        else // Else store the string formed
+        {
+            result[i] = '\0';
+            input = input + i + 1;
+            return result;
+        }
+    }
+
+    // Case when loop ends
+    result[i] = '\0';
+    input = NULL;
+
+    // Return the resultant pointer to the string
+    return result;
+}
+
 
 // From SGDK, modified from sprintf
 static const char const uppercase_hexchars[] = "0123456789ABCDEF";
