@@ -8,6 +8,6 @@ extern SM_Device DEV_KBPS2;
 bool KB_PS2_Init();
 u8 KB_PS2_Poll(u8 *data);
 
-void KB_PS2_SendCommand(u8 cmd);
+u8 KB_PS2_SendCommand(u8 cmd, char str[32]);
 
 #endif // KEYBOARD_PS2_H_INCLUDED
