@@ -12,6 +12,12 @@ Terminal: Added "DEC Special Character and Line Drawing Set" character map.
 Terminal: Allow printing characters > $7E again; Fixes some issues with certain telnet servers using extended ascii.
 Terminal: The terminal state is now acting as a command interpreter, which can be used to type commands and launch sessions with arguments.
 Added support for the Sega Saturn keyboard.
+PS2KB: Sending commands to a PS/2 keyboard now works. Turns out I was sending the data bits in reverse order.
+Device manager cleanup. Keyboards are now initialized externally.
+Device manager can now check for sega device identifiers on connected devices.
+SMDTC can now handle multiple different keyboards (Not at the same time however).
+Initial doxygen comment additions.
+Telnet: Title strings should no longer keep appending onto itself when disconnecting and connecting to a server.
 
 v0.27:
 SRAM: Added the ability to save config to SRAM.
